--- a/graphql-demo/build.gradle
+++ b/graphql-demo/build.gradle
@@ -17,9 +17,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework:spring-webflux'
+
 
 //	implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:12.0.0'
 // https://mavenlibs.com/maven/dependency/com.graphql-java/voyager-spring-boot-autoconfigure
