--- a/graphql-demo/src/main/resources/application.yaml
+++ b/graphql-demo/src/main/resources/application.yaml
@@ -2,6 +2,18 @@ spring:
   application:
     name: springboot-graphql-example
 
+  h2:
+    console:
+      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: sa
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+
   graphql:
     servlet:
       mapping: /graphql
